# typescript-book

./: .gitignore  package.json  test.md  test.ts
.cursor/rules/: teach.mdc
.recall/: recall-2025-03-31.csv
.specstory/history/: 2025-03-28_08-46-understanding-callable-and-non-callable-types.md  2025-03-31_00-40-markdown-conversion-for-typescript-recall.md  2025-03-31_00-43-merge-txt-and-md-files-script.md
merge_files_haskell/: .gitignore  HASKELL_APPROACH.md  merge_files_haskell.cabal
merge_files_haskell/app/: Main.hs
merge_files_haskell/dist-newstyle/cache/: compiler  config
merge_files_haskell/src/: MergeFiles.hs
merge_files_haskell/test/: Spec.hs
merge_files_rust/: .gitignore  Cargo.toml
merge_files_rust/src/: main.rs
ts_learning/: approachComparison.ts  eitherUtils.ts  immutableExample.ts  immutableVsMutable.ts  optionalUtils.ts  result.ts  userAgeUtils.ts
ts_learning/.specstory/history/: 2025-03-14_07-56-typescript-code-refactoring-and-explanation.md
