cabal-version:      3.0
name:               merge-files-haskell
version:            0.1.0.0
license:            BSD-3-Clause
author:             AI Assistant
maintainer:         no-reply@example.com
build-type:         Simple
extra-source-files: CHANGELOG.md

common common-settings
    build-depends:    base >= 4.17 && < 5
    ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    default-language: GHC2021

library
    import:           common-settings
    build-depends:
        , directory            >= 1.3.7.1
        , filepath             >= 1.4.100.4
        , containers           >= 0.6.7

    exposed-modules:  MergeFiles
    hs-source-dirs:   src

executable merge-files-haskell
    import:           common-settings
    main-is:          Main.hs
    build-depends:
        -- Internal library dependency
        , merge-files-haskell
        , optparse-applicative >= 0.18.1

    hs-source-dirs:   app
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite merge-files-haskell-test
    import:           common-settings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:
        -- Internal library dependency
        , merge-files-haskell
        , HUnit                >= 1.6.2.0

    hs-source-dirs:   test
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N 